Add AsciiDoc documentation with docs JAR classifier
Convert markdown documentation to AsciiDoc format in src/main/asciidoc/:
- index.adoc: Main entry point with features and quick start
- installation.adoc: Setup, configuration, provider registration
- usage.adoc: Code examples for all supported operations
- algorithms.adoc: Complete list of 275+ algorithms
- pqc.adoc: Post-quantum cryptography documentation
- performance.adoc: Benchmark results
- development.adoc: Contributing and architecture guide

Configure asciidoctor-maven-plugin to generate HTML documentation
and package it as a JAR with "docs" classifier using maven-assembly-plugin.

Use {project-version} attribute for automatic version substitution.
Simplify README.md to reference the comprehensive AsciiDoc docs.