@@ -25,37 +25,7 @@ GlaSSLess is a Java Cryptography Architecture (JCA) provider that wraps a system
 - **Java**: 25 or later (with `--enable-native-access` flag)
 - **OpenSSL**: 3.0 or later (`libcrypto.so.3`)
 
-### OpenSSL Version Compatibility
-
-| OpenSSL Version | Status | Notes |
-|-----------------|--------|-------|
-| 3.0.x | Supported | Base algorithms |
-| 3.1.x | Supported | Full support |
-| 3.2.x | Supported | Adds Argon2 KDFs |
-| 3.3.x | Supported | Latest features |
-| 3.5.x | Supported | Adds Post-Quantum Cryptography (ML-KEM, ML-DSA, SLH-DSA) |
-
-## Building
-
-```bash
-# Clone the repository
-git clone https://github.com/glassless-security/glassless.git
-cd glassless
-
-# Build with Maven
-mvn clean package
-
-# Run tests
-mvn test
-
-# Check code formatting
-mvn spotless:check
-
-# Apply code formatting
-mvn spotless:apply
-```
-
-## Installation
+## Quick Start
 
 ### Maven
 
@@ -63,178 +33,27 @@ mvn spotless:apply
 <dependency>
    <groupId>net.glassless</groupId>
    <artifactId>glassless-provider</artifactId>
-   <version>0.1-SNAPSHOT</version>
+   <version>0.3-SNAPSHOT</version>
 </dependency>
 ```
 
-### JVM Arguments
+### Gradle
 
-The provider requires native access permissions:
+```groovy
+implementation 'net.glassless:glassless-provider:0.3-SNAPSHOT'
+```
+
+### JVM Arguments
 
 ```bash
 java --enable-native-access=ALL-UNNAMED -jar your-app.jar
 ```
 
-Or in `JAVA_TOOL_OPTIONS`:
-
-```bash
-export JAVA_TOOL_OPTIONS="--enable-native-access=ALL-UNNAMED"
-```
-
-## Usage
-
-### Registering the Provider Programmatically
+### Basic Usage
 
 ```java
 import java.security.Security;
-import net.glassless.provider.GlaSSLessProvider;
-
-// Option 1: Add provider programmatically
-Security.addProvider(new GlaSSLessProvider());
-
-// Option 2: Insert at highest priority
-Security.insertProviderAt(new GlaSSLessProvider(), 1);
-```
-
-### Configuring in java.security
-
-For system-wide installation, add GlaSSLess to the `java.security` file located at `$JAVA_HOME/conf/security/java.security`.
-
-#### Finding the Configuration File
-
-```bash
-# Find java.security location
-java -XshowSettings:all 2>&1 | grep java.home
-# Then look in: <java.home>/conf/security/java.security
-```
-
-#### Adding the Provider
-
-Providers are listed with numeric priorities (lower numbers = higher priority). Add GlaSSLess to the provider list:
-
-```properties
-# Existing providers (example)
-security.provider.1=SUN
-security.provider.2=SunRsaSign
-security.provider.3=SunEC
-security.provider.4=SunJSSE
-security.provider.5=SunJCE
-security.provider.6=SunJGSS
-security.provider.7=SunSASL
-security.provider.8=XMLDSig
-security.provider.9=SunPCSC
-security.provider.10=JdkLDAP
-security.provider.11=JdkSASL
-security.provider.12=SunPKCS11
-
-# Add GlaSSLess
-security.provider.13=net.glassless.provider.GlaSSLessProvider
-```
-
-#### Best Practices
-
-**1. Provider Priority Positioning**
-
-| Position | Use Case | Recommendation |
-|----------|----------|----------------|
-| Low priority (e.g., 13) | Explicit use only | Use `getInstance("ALG", "GlaSSLess")` to select |
-| Mid priority (e.g., 5-6) | Preferred for specific algorithms | GlaSSLess used when JDK doesn't provide algorithm |
-| High priority (e.g., 1-2) | Default for all operations | All crypto uses GlaSSLess unless unavailable |
-
-**2. Recommended: Low Priority with Explicit Selection**
-
-For most applications, add GlaSSLess at low priority and explicitly request it when needed:
-
-```properties
-# Add GlaSSLess at low priority
-security.provider.13=net.glassless.provider.GlaSSLessProvider
-```
-
-```java
-// Explicitly request GlaSSLess for performance-critical operations
-KeyPairGenerator kpg = KeyPairGenerator.getInstance("EC", "GlaSSLess");
-Signature sig = Signature.getInstance("Ed25519", "GlaSSLess");
-```
-
-This approach:
-- Maintains JDK behavior by default
-- Allows selective use of GlaSSLess where beneficial
-- Avoids unexpected behavior changes
-
-**3. High Priority for OpenSSL-First Strategy**
-
-If you want all cryptographic operations to use OpenSSL by default:
-
-```properties
-# Insert GlaSSLess at high priority
-security.provider.1=net.glassless.provider.GlaSSLessProvider
-security.provider.2=SUN
-security.provider.3=SunRsaSign
-# ... remaining providers renumbered
-```
-
-> **Warning**: High priority positioning changes default behavior for all applications using this JVM. Test thoroughly before deploying.
-
-**4. FIPS Mode Considerations**
-
-When OpenSSL is in FIPS mode, GlaSSLess automatically excludes non-approved algorithms. For FIPS-compliant deployments:
-
-```properties
-# Place GlaSSLess at high priority to ensure FIPS-approved algorithms are used
-security.provider.1=net.glassless.provider.GlaSSLessProvider
-security.provider.2=SunJSSE
-# ... other providers
-```
-
-**5. TLS/SSL Configuration**
-
-For TLS connections to use GlaSSLess algorithms, ensure the provider is available before `SunJSSE`:
-
-```properties
-security.provider.1=net.glassless.provider.GlaSSLessProvider
-security.provider.2=SunJSSE
-# ... remaining providers
-```
-
-The JSSE implementation will automatically use GlaSSLess for underlying cryptographic operations.
-
-**6. Alternative: Security Properties File Override**
-
-Instead of modifying the system `java.security`, create a custom properties file:
-
-```properties
-# custom-security.properties
-security.provider.1=net.glassless.provider.GlaSSLessProvider
-security.provider.2=SUN
-# ... etc
-```
-
-Then specify it at runtime:
-
-```bash
-java -Djava.security.properties=/path/to/custom-security.properties \
-     --enable-native-access=ALL-UNNAMED \
-     -jar your-app.jar
-```
-
-**7. Module Path Configuration**
-
-When using the module path, ensure GlaSSLess is accessible:
-
-```bash
-java --module-path /path/to/glassless-provider.jar \
-     --add-modules net.glassless.provider \
-     --enable-native-access=net.glassless.provider \
-     -jar your-app.jar
-```
-
-### Basic Examples
-
-#### Message Digest (Hashing)
-
-```java
 import java.security.MessageDigest;
-import java.security.Security;
 import net.glassless.provider.GlaSSLessProvider;
 
 Security.addProvider(new GlaSSLessProvider());
@@ -243,487 +62,104 @@ MessageDigest md = MessageDigest.getInstance("SHA-256", "GlaSSLess");
 byte[] hash = md.digest("Hello, World!".getBytes());
 ```
 
-#### Symmetric Encryption (AES-GCM)
+## Documentation
 
-```java
-import javax.crypto.Cipher;
-import javax.crypto.KeyGenerator;
-import javax.crypto.SecretKey;
-import javax.crypto.spec.GCMParameterSpec;
-import java.security.SecureRandom;
-import java.security.Security;
-import net.glassless.provider.GlaSSLessProvider;
+Comprehensive documentation is available in the `docs` classifier JAR and in `src/main/asciidoc/`:
 
-Security.addProvider(new GlaSSLessProvider());
+| Document | Description |
+|----------|-------------|
+| [Installation Guide](src/main/asciidoc/installation.adoc) | Setup, configuration, and provider registration |
+| [Usage Guide](src/main/asciidoc/usage.adoc) | Code examples for all supported operations |
+| [Supported Algorithms](src/main/asciidoc/algorithms.adoc) | Complete list of 275+ algorithms |
+| [Post-Quantum Cryptography](src/main/asciidoc/pqc.adoc) | ML-KEM, ML-DSA, SLH-DSA, and hybrid KEMs |
+| [Performance](src/main/asciidoc/performance.adoc) | Benchmark results and optimization guidance |
+| [Development](src/main/asciidoc/development.adoc) | Contributing and architecture guide |
 
-// Generate a key
-KeyGenerator keyGen = KeyGenerator.getInstance("AES", "GlaSSLess");
-keyGen.init(256);
-SecretKey key = keyGen.generateKey();
+### Building Documentation
 
-// Generate IV
-byte[] iv = new byte[12];
-SecureRandom random = SecureRandom.getInstance("NativePRNG", "GlaSSLess");
-random.nextBytes(iv);
-
-// Encrypt
-Cipher cipher = Cipher.getInstance("AES_256/GCM/NoPadding", "GlaSSLess");
-cipher.init(Cipher.ENCRYPT_MODE, key, new GCMParameterSpec(128, iv));
-byte[] ciphertext = cipher.doFinal("Secret message".getBytes());
-
-// Decrypt
-cipher.init(Cipher.DECRYPT_MODE, key, new GCMParameterSpec(128, iv));
-byte[] plaintext = cipher.doFinal(ciphertext);
+```bash
+mvn generate-resources
+# HTML documentation generated in target/generated-docs/
 ```
-
-#### Digital Signatures (ECDSA)
-
-```java
-import java.security.*;
-import net.glassless.provider.GlaSSLessProvider;
-
-Security.addProvider(new GlaSSLessProvider());
-
-// Generate key pair
-KeyPairGenerator keyPairGen = KeyPairGenerator.getInstance("EC", "GlaSSLess");
-keyPairGen.initialize(256);
-KeyPair keyPair = keyPairGen.generateKeyPair();
-
-// Sign
-Signature signer = Signature.getInstance("SHA256withECDSA", "GlaSSLess");
-signer.initSign(keyPair.getPrivate());
-signer.update("Data to sign".getBytes());
-byte[] signature = signer.sign();
-
-// Verify
-Signature verifier = Signature.getInstance("SHA256withECDSA", "GlaSSLess");
-verifier.initVerify(keyPair.getPublic());
-verifier.update("Data to sign".getBytes());
-boolean valid = verifier.verify(signature);
-```
-
-#### Key Derivation (HKDF)
-
-```java
-import javax.crypto.KDF;
-import javax.crypto.SecretKey;
-import javax.crypto.spec.HKDFParameterSpec;
-import javax.crypto.spec.SecretKeySpec;
-import java.security.Security;
-import net.glassless.provider.GlaSSLessProvider;
-
-Security.addProvider(new GlaSSLessProvider());
-
-// Input keying material
-byte[] ikm = "input-key-material".getBytes();
-byte[] salt = "salt-value".getBytes();
-byte[] info = "context-info".getBytes();
-
-KDF hkdf = KDF.getInstance("HKDF-SHA256", "GlaSSLess");
-SecretKey derived = hkdf.deriveKey("AES",
-    HKDFParameterSpec.expandOnly(new SecretKeySpec(ikm, "HKDF"), info, 32));
-```
-
-#### HMAC
-
-```java
-import javax.crypto.Mac;
-import javax.crypto.spec.SecretKeySpec;
-import java.security.Security;
-import net.glassless.provider.GlaSSLessProvider;
-
-Security.addProvider(new GlaSSLessProvider());
-
-byte[] key = "secret-key".getBytes();
-SecretKeySpec keySpec = new SecretKeySpec(key, "HmacSHA256");
-
-Mac mac = Mac.getInstance("HmacSHA256", "GlaSSLess");
-mac.init(keySpec);
-byte[] hmac = mac.doFinal("Message".getBytes());
-```
-
-#### Post-Quantum Key Encapsulation (ML-KEM)
-
-Requires OpenSSL 3.5+.
-
-```java
-import javax.crypto.KEM;
-import java.security.*;
-import net.glassless.provider.GlaSSLessProvider;
-
-Security.addProvider(new GlaSSLessProvider());
-
-// Generate ML-KEM key pair
-KeyPairGenerator kpg = KeyPairGenerator.getInstance("ML-KEM-768", "GlaSSLess");
-KeyPair keyPair = kpg.generateKeyPair();
-
-// Encapsulation (sender side)
-KEM kem = KEM.getInstance("ML-KEM-768", "GlaSSLess");
-KEM.Encapsulator encapsulator = kem.newEncapsulator(keyPair.getPublic());
-KEM.Encapsulated encapsulated = encapsulator.encapsulate();
-byte[] ciphertext = encapsulated.encapsulation();
-SecretKey sharedSecretSender = encapsulated.key();
-
-// Decapsulation (receiver side)
-KEM.Decapsulator decapsulator = kem.newDecapsulator(keyPair.getPrivate());
-SecretKey sharedSecretReceiver = decapsulator.decapsulate(ciphertext);
-
-// Both parties now have the same shared secret
-```
-
-#### Post-Quantum Digital Signatures (ML-DSA)
-
-Requires OpenSSL 3.5+.
-
-```java
-import java.security.*;
-import net.glassless.provider.GlaSSLessProvider;
-
-Security.addProvider(new GlaSSLessProvider());
-
-// Generate ML-DSA key pair
-KeyPairGenerator kpg = KeyPairGenerator.getInstance("ML-DSA-65", "GlaSSLess");
-KeyPair keyPair = kpg.generateKeyPair();
-
-// Sign
-Signature signer = Signature.getInstance("ML-DSA-65", "GlaSSLess");
-signer.initSign(keyPair.getPrivate());
-signer.update("Data to sign".getBytes());
-byte[] signature = signer.sign();
-
-// Verify
-Signature verifier = Signature.getInstance("ML-DSA-65", "GlaSSLess");
-verifier.initVerify(keyPair.getPublic());
-verifier.update("Data to sign".getBytes());
-boolean valid = verifier.verify(signature);
-```
-
-#### Hybrid Key Encapsulation (X25519MLKEM768)
-
-Hybrid KEMs combine classical and post-quantum cryptography. Requires OpenSSL 3.5+.
-
-```java
-import javax.crypto.KEM;
-import java.security.*;
-import net.glassless.provider.GlaSSLessProvider;
-
-Security.addProvider(new GlaSSLessProvider());
-
-// Server generates hybrid key pair
-KeyPairGenerator kpg = KeyPairGenerator.getInstance("X25519MLKEM768", "GlaSSLess");
-KeyPair serverKeyPair = kpg.generateKeyPair();
-
-// Client encapsulates shared secret using server's public key
-KEM kem = KEM.getInstance("X25519MLKEM768", "GlaSSLess");
-KEM.Encapsulator encapsulator = kem.newEncapsulator(serverKeyPair.getPublic());
-KEM.Encapsulated encapsulated = encapsulator.encapsulate();
-
-byte[] ciphertext = encapsulated.encapsulation();  // Send to server
-SecretKey clientSecret = encapsulated.key();       // 64-byte shared secret
-
-// Server decapsulates to recover the same shared secret
-KEM.Decapsulator decapsulator = kem.newDecapsulator(serverKeyPair.getPrivate());
-SecretKey serverSecret = decapsulator.decapsulate(ciphertext);
-
-// Both parties now have identical shared secrets
-```
-
-> **Note**: JDK 25's JSSE does not yet support hybrid named groups for TLS 1.3. See [README-PQC.md](README-PQC.md) for workarounds and detailed documentation.
 
 ## Supported Algorithms
 
-### Message Digests (18)
+GlaSSLess provides 275+ cryptographic algorithms:
 
-| Algorithm | FIPS Approved |
-|-----------|---------------|
-| SHA-224, SHA-256, SHA-384, SHA-512 | Yes |
-| SHA-512/224, SHA-512/256 | Yes |
-| SHA3-224, SHA3-256, SHA3-384, SHA3-512 | Yes |
-| SHAKE128, SHAKE256 | Yes |
-| BLAKE2b-512, BLAKE2s-256 | Yes |
-| MD5, SHA-1 | No |
-| SM3, RIPEMD160 | No |
+| Category | Count | Examples |
+|----------|-------|----------|
+| Message Digests | 18 | SHA-256, SHA-512, SHA3-256, BLAKE2b-512 |
+| Ciphers | 143 | AES-GCM, ChaCha20-Poly1305, Camellia |
+| MACs | 20 | HMAC-SHA256, KMAC256, Poly1305 |
+| Signatures | 48 | ECDSA, EdDSA, RSA-PSS, ML-DSA, SLH-DSA |
+| KEMs | 6 | ML-KEM-768, X25519MLKEM768 |
+| KDFs | 14 | HKDF, PBKDF2, TLS13-KDF, Argon2 |
+| Key Agreement | 5 | ECDH, X25519, X448 |
 
-### Ciphers (143)
+See [Supported Algorithms](src/main/asciidoc/algorithms.adoc) for the complete list.
 
-| Algorithm | Key Sizes | Modes | FIPS Approved |
-|-----------|-----------|-------|---------------|
-| AES | 128, 192, 256 | ECB, CBC, CFB, CTR, OFB, GCM, CCM, XTS | Yes |
-| AES Key Wrap | 128, 192, 256 | KW, KWP | Yes |
-| Camellia | 128, 192, 256 | ECB, CBC, CFB, CTR, OFB | No |
-| ARIA | 128, 192, 256 | ECB, CBC, CFB, CTR, OFB, GCM | No |
-| SM4 | 128 | ECB, CBC, CFB, CTR, OFB | No |
-| ChaCha20 | 256 | Stream | No |
-| ChaCha20-Poly1305 | 256 | AEAD | No |
-| DESede (3DES) | 168 | ECB, CBC | No |
-| RSA | 1024-8192 | ECB with PKCS1/OAEP | Yes |
+## Post-Quantum Cryptography
 
-### MACs (20)
+GlaSSLess supports NIST-standardized post-quantum algorithms (requires OpenSSL 3.5+):
 
-| Algorithm | FIPS Approved |
-|-----------|---------------|
-| HmacSHA224, HmacSHA256, HmacSHA384, HmacSHA512 | Yes |
-| HmacSHA3-224, HmacSHA3-256, HmacSHA3-384, HmacSHA3-512 | Yes |
-| AESCMAC, AESGMAC | Yes |
-| KMAC128, KMAC256 | Yes |
-| HmacSHA1 | No |
-| Poly1305, SipHash | No |
+| Standard | Algorithm | Type |
+|----------|-----------|------|
+| FIPS 203 | ML-KEM-512/768/1024 | Key Encapsulation |
+| FIPS 204 | ML-DSA-44/65/87 | Digital Signature |
+| FIPS 205 | SLH-DSA (12 variants) | Digital Signature |
 
-### Signatures (31+)
+**Hybrid KEMs** (X25519MLKEM768, X448MLKEM1024) combine classical and post-quantum cryptography for defense-in-depth.
 
-| Algorithm | FIPS Approved |
-|-----------|---------------|
-| SHA256withRSA, SHA384withRSA, SHA512withRSA | Yes |
-| SHA256withRSAandMGF1 (RSA-PSS) | Yes |
-| SHA256withECDSA, SHA384withECDSA, SHA512withECDSA | Yes |
-| SHA3-256withECDSA, SHA3-384withECDSA, SHA3-512withECDSA | Yes |
-| SHA256withDSA, SHA384withDSA, SHA512withDSA | Yes |
-| Ed25519, Ed448, EdDSA | Yes |
-| SHA1withRSA, SHA1withECDSA, SHA1withDSA | No |
-
-### Post-Quantum Signatures (15)
-
-Requires OpenSSL 3.5+.
-
-| Algorithm | Security Level | FIPS Approved |
-|-----------|----------------|---------------|
-| ML-DSA-44 | 128-bit | Yes (FIPS 204) |
-| ML-DSA-65 | 192-bit | Yes (FIPS 204) |
-| ML-DSA-87 | 256-bit | Yes (FIPS 204) |
-| SLH-DSA-SHA2-128s, SLH-DSA-SHA2-128f | 128-bit | Yes (FIPS 205) |
-| SLH-DSA-SHA2-192s, SLH-DSA-SHA2-192f | 192-bit | Yes (FIPS 205) |
-| SLH-DSA-SHA2-256s, SLH-DSA-SHA2-256f | 256-bit | Yes (FIPS 205) |
-| SLH-DSA-SHAKE-128s, SLH-DSA-SHAKE-128f | 128-bit | Yes (FIPS 205) |
-| SLH-DSA-SHAKE-192s, SLH-DSA-SHAKE-192f | 192-bit | Yes (FIPS 205) |
-| SLH-DSA-SHAKE-256s, SLH-DSA-SHAKE-256f | 256-bit | Yes (FIPS 205) |
-
-### Key Encapsulation Mechanisms (5)
-
-Requires OpenSSL 3.5+.
-
-| Algorithm | Security Level | FIPS Approved |
-|-----------|----------------|---------------|
-| ML-KEM-512 | 128-bit | Yes (FIPS 203) |
-| ML-KEM-768 | 192-bit | Yes (FIPS 203) |
-| ML-KEM-1024 | 256-bit | Yes (FIPS 203) |
-| X25519MLKEM768 | Hybrid | Yes |
-| X448MLKEM1024 | Hybrid | Yes |
-
-> **Hybrid KEMs** combine classical key exchange (X25519/X448) with ML-KEM for defense against both classical and quantum attacks. See [README-PQC.md](README-PQC.md) for details.
-
-### Key Agreement (5)
-
-| Algorithm | FIPS Approved |
-|-----------|---------------|
-| ECDH, DH | Yes |
-| X25519, X448, XDH | Yes |
-
-### Key Derivation Functions (5)
-
-| Algorithm | FIPS Approved |
-|-----------|---------------|
-| HKDF-SHA256, HKDF-SHA384, HKDF-SHA512 | Yes |
-| HKDF-SHA224 | Yes |
-| HKDF-SHA1 | No |
-
-### Secret Key Factories (32)
-
-| Algorithm | FIPS Approved |
-|-----------|---------------|
-| PBKDF2WithHmacSHA256, PBKDF2WithHmacSHA384, PBKDF2WithHmacSHA512 | Yes |
-| PBKDF2WithHmacSHA3-256, PBKDF2WithHmacSHA3-384, PBKDF2WithHmacSHA3-512 | Yes |
-| PBKDF2WithHmacSHA1 | No |
-| SCRYPT | No |
-
-### Secure Random (3)
-
-| Algorithm | FIPS Approved |
-|-----------|---------------|
-| NativePRNG, DRBG | Yes |
-| SHA1PRNG | No |
-
-## FIPS Mode
-
-When OpenSSL is configured with FIPS mode enabled, GlaSSLess automatically detects this and excludes non-FIPS-approved algorithms from registration.
-
-```java
-GlaSSLessProvider provider = new GlaSSLessProvider();
-boolean fipsMode = provider.isFIPSMode();
-System.out.println("FIPS Mode: " + (fipsMode ? "ENABLED" : "DISABLED"));
-```
-
-### Supported FIPS Standards
-
-| Standard | Description | Algorithms |
-|----------|-------------|------------|
-| FIPS 140-3 | Cryptographic Module Validation | OpenSSL FIPS provider |
-| FIPS 180-4 | Secure Hash Standard | SHA-1, SHA-224, SHA-256, SHA-384, SHA-512, SHA-512/224, SHA-512/256 |
-| FIPS 186-5 | Digital Signature Standard | DSA, ECDSA, EdDSA (Ed25519, Ed448) |
-| FIPS 197 | Advanced Encryption Standard | AES-128, AES-192, AES-256 |
-| FIPS 198-1 | HMAC | HMAC-SHA-1, HMAC-SHA-224, HMAC-SHA-256, HMAC-SHA-384, HMAC-SHA-512 |
-| FIPS 202 | SHA-3 Standard | SHA3-224, SHA3-256, SHA3-384, SHA3-512, SHAKE128, SHAKE256 |
-| FIPS 203 | ML-KEM | ML-KEM-512, ML-KEM-768, ML-KEM-1024 (OpenSSL 3.5+) |
-| FIPS 204 | ML-DSA | ML-DSA-44, ML-DSA-65, ML-DSA-87 (OpenSSL 3.5+) |
-| FIPS 205 | SLH-DSA | SLH-DSA-SHA2-*, SLH-DSA-SHAKE-* (OpenSSL 3.5+) |
-
-> **Note**: FIPS 203, 204, and 205 are the post-quantum cryptography standards. Support requires OpenSSL 3.5+ compiled with the FIPS provider that includes these algorithms.
-
-## Command-Line Tool
-
-Display provider information:
-
-```bash
-java --enable-native-access=ALL-UNNAMED -jar glassless-provider-0.1-SNAPSHOT.jar
-
-# Verbose mode (list all algorithms)
-java --enable-native-access=ALL-UNNAMED -jar glassless-provider-0.1-SNAPSHOT.jar --verbose
-```
+See [Post-Quantum Cryptography](src/main/asciidoc/pqc.adoc) for details, including JEP 527 roadmap and TLS 1.3 integration.
 
 ## Performance
 
-GlaSSLess provides significant performance advantages for asymmetric cryptography operations while JDK implementations excel at small-data symmetric operations due to HotSpot intrinsics.
+GlaSSLess excels at asymmetric cryptography:
 
-### Where GlaSSLess Excels
-
-| Operation | Typical Speedup |
-|-----------|-----------------|
+| Operation | vs JDK |
+|-----------|--------|
 | ECDH Key Agreement | ~6x faster |
-| Ed25519 Signing | ~8x faster |
-| Ed25519 Verification | ~5-6x faster |
-| EC Key Generation (P-256/P-384) | ~2-3x faster |
-| Ed25519/X25519 Key Generation | ~2-5x faster |
+| EC Key Generation | ~2x faster |
 | SecureRandom (large buffers) | ~10-25x faster |
-| SHA3/SHAKE (large data) | ~1.5-2x faster |
 
-### Where JDK Excels
+JDK excels at small-data symmetric operations due to HotSpot intrinsics.
 
-| Operation | JDK Advantage |
-|-----------|---------------|
-| SHA-256/SHA-512 (small data <1KB) | ~4-6x faster |
-| HMAC (small data <1KB) | ~4-8x faster |
-| SecureRandom (small buffers <64B) | ~2x faster |
+See [Performance](src/main/asciidoc/performance.adoc) for detailed benchmarks.
 
-> **Note**: For large data (16KB+), symmetric operation performance converges between implementations.
-
-For detailed benchmark results on your system, run:
+## Building
 
 ```bash
+# Build
+mvn clean package
+
+# Run tests
+mvn test
+
+# Run benchmarks
 mvn test -Pbenchmarks
-./scripts/generate-performance-report.sh
 ```
 
-This generates `PERFORMANCE.md` with full benchmark data for your environment.
+## FIPS Mode
 
-## Benchmarks
+GlaSSLess automatically detects OpenSSL FIPS mode and excludes non-approved algorithms:
 
-JMH microbenchmarks compare performance between JDK and GlaSSLess implementations. Benchmarks are activated via a Maven profile:
-
-```bash
-# Run all benchmarks (~12 minutes)
-mvn test -Pbenchmarks
-
-# Generate detailed performance report
-./scripts/generate-performance-report.sh
-
-# Run specific benchmark class
-mvn test -Pbenchmarks -Dexec.args=".*MessageDigestBenchmark.*"
-```
-
-### Benchmark Categories
-
-| Benchmark | Algorithms | Data Sizes |
-|-----------|------------|------------|
-| MessageDigestBenchmark | SHA-256, SHA-512, SHA3-256 | 64B, 1KB, 16KB, 1MB |
-| CipherBenchmark | AES/GCM, AES/CBC, ChaCha20-Poly1305 | 64B, 1KB, 16KB, 1MB |
-| MacBenchmark | HmacSHA256, HmacSHA512, HmacSHA3-256 | 64B, 1KB, 16KB, 1MB |
-| SignatureBenchmark | SHA256withECDSA, SHA384withECDSA, Ed25519 | - |
-| KeyAgreementBenchmark | ECDH, X25519 | - |
-| KEMBenchmark | ML-KEM-512, ML-KEM-768, ML-KEM-1024 | - |
-| KeyPairGeneratorBenchmark | EC P-256/P-384, RSA-2048/4096, Ed25519, X25519 | - |
-| SecureRandomBenchmark | NativePRNG | 16B to 4KB |
-
-Results are saved to `target/jmh-results.json`.
-
-## Development
-
-### Code Style
-
-The project uses [Spotless](https://github.com/diffplug/spotless) for code formatting:
-
-- 3-space indentation for Java and XML
-- Import ordering: `java`, `javax`, `org`, `com`, `net`
-- UTF-8 encoding, Unix line endings
-
-```bash
-# Check formatting
-mvn spotless:check
-
-# Apply formatting
-mvn spotless:apply
-```
-
-### Project Structure
-
-```
-src/main/java/net/glassless/provider/
-├── GlaSSLessProvider.java       # Main provider class
-├── FIPSStatus.java              # FIPS mode detection
-└── internal/
-    ├── OpenSSLCrypto.java       # FFM bindings to OpenSSL
-    ├── cipher/                  # Cipher implementations
-    ├── digest/                  # MessageDigest implementations
-    ├── mac/                     # MAC implementations
-    ├── signature/               # Signature implementations
-    ├── kdf/                     # KDF implementations
-    ├── keygen/                  # KeyGenerator implementations
-    ├── keypairgen/              # KeyPairGenerator implementations
-    ├── keyfactory/              # KeyFactory implementations
-    ├── keyagreement/            # KeyAgreement implementations
-    ├── securerandom/            # SecureRandom implementations
-    ├── mlkem/                   # ML-KEM (FIPS 203) implementations
-    ├── mldsa/                   # ML-DSA (FIPS 204) implementations
-    ├── slhdsa/                  # SLH-DSA (FIPS 205) implementations
-    └── ...
+```java
+GlaSSLessProvider provider = new GlaSSLessProvider();
+System.out.println("FIPS Mode: " + provider.isFIPSMode());
 ```
 
 ## License
 
-This project is licensed under the **Apache License, Version 2.0**.
-
-You may obtain a copy of the License at: http://www.apache.org/licenses/LICENSE-2.0
-
-```
-Copyright 2026
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-```
-
-See [LICENSE.md](LICENSE.md) for the full license text.
+Apache License, Version 2.0. See [LICENSE.md](LICENSE.md).
 
 ## Contributing
 
-Contributions are welcome! Please:
-
-1. Fork the repository
-2. Create a feature branch (`git checkout -b feature/my-feature`)
-3. Ensure code follows the project style (`mvn spotless:apply`)
-4. Add tests for new functionality
-5. Commit your changes (`git commit -am 'Add new feature'`)
-6. Push to the branch (`git push origin feature/my-feature`)
-7. Open a Pull Request
-
-Please ensure all tests pass before submitting:
+Contributions welcome! See [Development Guide](src/main/asciidoc/development.adoc) for guidelines.
 
 ```bash
+# Format code
+mvn spotless:apply
+
+# Run tests
 mvn test
 ```
